# Real-Time-Transaction-Prediction

./: .gitignore  EDA_and_Modeling.ipynb  README.md  pyproject.toml
configurations/: config.json  config.py
configurations/helpers/: JSONReader.py
data_models/: Datasets.py  config_models.py
ml_core/: BaseTrainer.py  RandomForestTrainer.py  XGBoostTrainer.py
src/: Preprocessor.py  main.py
