[tool.poetry]
name = "dawiso-ask"
version = "0.1.0"
description = ""
authors = ["Artem Sorokin <artem.sorokin@dawiso.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
fastapi = "^0.115.0"
jupyter-black = "^0.3.4"
loguru = "^0.7.2"
matplotlib = "^3.8.3"
numpy = "^2.1"
pandas = "^2.2.0"
psycopg2-binary = "^2.9.9"
pyodbc = "^5.1.0"
python = "3.13.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.30"
streamlit = "^1.35.0"
streamlit-extras = "^0.4.0"
uvicorn = "^0.31.0"
validators = "^0.28.0"
watchdog = "^4.0.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
scikit-learn = "1.5.2"



[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"
